cmake_minimum_required(VERSION 3.23)
project(Timus)

add_executable(1409 ./src/1409.cpp)
add_executable(1877 ./src/1877.cpp)
add_executable(2001 ./src/2001.cpp)
add_executable(1787 ./src/1787.cpp)
add_executable(1293 ./src/1293.cpp)
add_executable(1000 ./src/1000.cpp)
add_executable(1001 ./src/1001.cpp)